# discord-bot2

./: .env.example  .replit  bot.py  command_bans.json  custom_commands.json  discord_bot_complete.py  main.py  maintenance.json  pyproject.toml  replit.md  web_interface.py
attached_assets/: Pasted--class-InviteSetupView-discord-ui-View-def-init-self-super-init-timeout-No-1754747677445_1754747677446.txt  Pasted-import-discord-from-discord-ext-import-commands-import-os-import-re-import-random-import-typing-1754747016518_1754747016519.txt
static/: style.css
templates/: admin.html  base.html  commands.html  index.html
